--- a/4-homepage.html
+++ b/4-homepage.html
@@ -313,5 +313,171 @@
           <button class="btn btn-primary btn-lg align-center mx-auto px-4 my-3 shadow text-uppercase d-flex justify-content-center" role="button">register for free</button>
       </div>
   </section>
+  <!-- Latest Videos Carousel -->
+  <section id="popular" class="py-5">
+    <div class="row d-flex justify-content-center py-4">
+      <div class="col text-center">
+        <h4 class="header-content-subtitle">Latest Videos</h4>
+      </div>
+    </div>
+    <div id="video-carousel" class="carousel video-carousel slide" data-ride="carousel">
+      <div class="carousel-inner container" role="listbox">
+          <div class="carousel-item active d-flex flex-nowrap justify-content-center row">
+            <div class="card col-sm-10 col-md-5 col-lg-3">
+              <div class="card-body">
+                <div class=" d-flex align-items-center justify-content-center">
+                  <img src="./images/thumbnail_4.jpg" alt="" class="img-fluid"/>
+                    <img src="./images/play.png" alt="" />
+                </div>
+                <h4>Diagonal Smile</h4>
+                <p >
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Dolorum quia asperiores iste, ex illo consectetur.
+                </p>
+                <div class="row align-items-center">
+                  <div class="col-2 col-md-4">
+                    <img src="./images/profile_1.jpg" alt="" class="img profile__pic__sm ">
+
+                  </div>
+                  <div class="col primary">
+                    Phillip Massey
+                  </div>
+                </div>
+                <div class="row pt-3">
+                  <div class="col stars">
+                    <img src="./images/star_on.png" alt="" class="stars" />
+                    <img src="./images/star_on.png" alt="" class="stars" />
+                    <img src="./images/star_on.png" alt="" class="stars" />
+                    <img src="./images/star_on.png" alt="" class="stars" />
+                    <img src="./images/star_off.png" alt="" class="stars" />
+                  </div>
+                  <div class="col-4">
+                    <p class="primary text-right">8 min</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="card col-sm-10 col-md-5 col-lg-3 d-none d-md-block">
+              <div class="card-body">
+                <div class=" d-flex align-items-center justify-content-center">
+                  <img src="./images/thumbnail_3.jpg" alt="" class="img-fluid"/>
+                  <div class=" row justify-content-center align-items-center">
+                    <img src="./images/play.png" alt="" />
+                  </div>
+                </div>
+                <h4>Sad Smile</h4>
+                <p >
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Dolorum quia asperiores iste, ex illo consectetur.
+                </p>
+                <div class="row align-items-center">
+                  <div class="col-4">
+                    <img src="./images/profile_1.jpg" alt="" class="img profile__pic__sm ">
+
+                  </div>
+                  <div class="col primary">
+                    Phillip Massey
+                  </div>
+                </div>
+                <div class="row justify-content-between pt-3">
+                  <div class="col stars">
+                    <img src="./images/star_on.png" alt="" class="stars" />
+                    <img src="./images/star_on.png" alt="" class="stars" />
+                    <img src="./images/star_on.png" alt="" class="stars" />
+                    <img src="./images/star_on.png" alt="" class="stars" />
+                    <img src="./images/star_off.png" alt="" class="stars" />
+                  </div>
+                  <div class="col-4">
+                    <p class="primary text-right">8 min</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="card col-sm-10 col-md-5 col-lg-3 d-none d-lg-block">
+              <div class="card-body">
+                <div class=" d-flex align-items-center justify-content-center">
+                  <img src="./images/thumbnail_1.jpg" alt="" class="img-fluid"/>
+                  <div class=" row justify-content-center">
+                    <img src="./images/play.png" alt="" />
+                  </div>
+                </div>
+                <h4>Natural Smile</h4>
+                <p >
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Dolorum quia asperiores iste, ex illo consectetur.
+                </p>
+                <div class="row align-items-center">
+                  <div class="col-2 col-md-4">
+                    <img src="./images/profile_1.jpg" alt="" class="img profile__pic__sm ">
+
+                  </div>
+                  <div class="col primary">
+                    Phillip Massey
+                  </div>
+                </div>
+                <div class="row justify-content-between pt-3">
+                  <div class="col stars">
+                    <img src="./images/star_on.png" alt="" class="stars" />
+                    <img src="./images/star_on.png" alt="" class="stars" />
+                    <img src="./images/star_on.png" alt="" class="stars" />
+                    <img src="./images/star_on.png" alt="" class="stars" />
+                    <img src="./images/star_off.png" alt="" class="stars" />
+                  </div>
+                  <div class="col-4">
+                    <p class="primary text-right">8 min</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="card col-sm-10 col-md-5 col-lg-3 d-none d-lg-block">
+              <div class="card-body">
+                <div class=" d-flex align-items-center justify-content-center">
+                  <img src="./images/thumbnail_2.jpg" alt="" class="img-fluid"/>
+                  <div class=" row justify-content-cente">
+                    <img src="./images/play.png" alt="" />
+                  </div>
+                </div>
+                <h4>Happy Smile</h4>
+                <p >
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Dolorum quia asperiores iste, ex illo consectetur.
+                </p>
+                <div class="row align-items-center">
+                  <div class="col-4">
+                    <img src="./images/profile_1.jpg" alt="" class="img profile__pic__sm ">
+                  </div>
+                  <div class="col primary">
+                    Phillip Massey
+                  </div>
+                </div>
+                <div class="row justify-content-between pt-3">
+                  <div class="col stars">
+                    <img src="./images/star_on.png" alt="" class="stars" />
+                    <img src="./images/star_on.png" alt="" class="stars" />
+                    <img src="./images/star_on.png" alt="" class="stars" />
+                    <img src="./images/star_on.png" alt="" class="stars" />
+                    <img src="./images/star_off.png" alt="" class="stars" />
+                  </div>
+                  <div class="col-4">
+                    <p class="primary text-right">8 min</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      <a class="carousel-control-prev" href="#video-carousel" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true">
+          <img src="./images/arrow_black_left.png" alt="" />
+        </span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#video-carousel" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"
+          ><img src="./images/arrow_black_right.png" alt="" /></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+  </section>
   </body>
-  </html>
+</html>
